--- a/RumTime/LaunchScreen.storyboard
+++ b/RumTime/LaunchScreen.storyboard
@@ -16,18 +16,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Xfz-8Y-fLl">
-                                <rect key="frame" x="96.666666666666686" y="326" width="200" height="200"/>
+                                <rect key="frame" x="49.25" y="326" width="294.5" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="3fH-gF-Kzd"/>
-                                    <constraint firstAttribute="height" constant="200" id="vZh-5v-9dh"/>
+                                    <constraint firstAttribute="width" secondItem="Xfz-8Y-fLl" secondAttribute="height" multiplier="1:1" id="aspect-ratio"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Xfz-8Y-fLl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="R0S-yp-MmZ"/>
                             <constraint firstItem="Xfz-8Y-fLl" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="gPX-5K-h2e"/>
+                            <constraint firstItem="Xfz-8Y-fLl" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.75" id="width-constraint"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,5 +38,8 @@
     </scenes>
     <resources>
         <image name="LaunchLogo" width="1024" height="1024"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
